--- a/apisix/apisix-dashboard/conf.yaml
+++ b/apisix/apisix-dashboard/conf.yaml
@@ -90,83 +90,83 @@ authentication:
 #  scope: openid
 
 plugins:
-#  - api-breaker
-#  - authz-casbin
-#  - authz-casdoor
-#  - authz-keycloak
-#  - aws-lambda
-#  - azure-functions
-#  - basic-auth
-  # - batch-requests
-#  - clickhouse-logger
-#  - client-control
-#  - consumer-restriction
+  - api-breaker
+  - authz-casbin
+  - authz-casdoor
+  - authz-keycloak
+  - aws-lambda
+  - azure-functions
+  - basic-auth
+  - batch-requests
+  - clickhouse-logger
+  - client-control
+  - consumer-restriction
   - cors
-#  - csrf
-#  - datadog
-  # - dubbo-proxy
-#  - echo
-#  - error-log-logger
-  # - example-plugin
-#  - ext-plugin-post-req
-#  - ext-plugin-post-resp
-#  - ext-plugin-pre-req
-#  - fault-injection
-#  - file-logger
-#  - forward-auth
-#  - google-cloud-logging
-#  - grpc-transcode
-#  - grpc-web
+  - csrf
+  - datadog
+  - dubbo-proxy
+  - echo
+  - error-log-logger
+  - example-plugin
+  - ext-plugin-post-req
+  - ext-plugin-post-resp
+  - ext-plugin-pre-req
+  - fault-injection
+  - file-logger
+  - forward-auth
+  - google-cloud-logging
+  - grpc-transcode
+  - grpc-web
   - gzip
-#  - hmac-auth
-#  - http-logger
-#  - ip-restriction
-#  - jwt-auth
-#  - kafka-logger
-#  - kafka-proxy
+  - hmac-auth
+  - http-logger
+  - ip-restriction
+  - jwt-auth
+  - kafka-logger
+  - kafka-proxy
   - key-auth
-#  - ldap-auth
-#  - limit-conn
-#  - limit-count
+  - ldap-auth
+  - limit-conn
+  - limit-count
   - limit-req
-#  - loggly
-  # - log-rotate
-#  - mocking
-  # - node-status
-#  - opa
-#  - openid-connect
-#  - opentelemetry
-#  - openwhisk
-#  - prometheus
-#  - proxy-cache
-#  - proxy-control
-#  - proxy-mirror
-#  - proxy-rewrite
-#  - public-api
+  - loggly
+  - log-rotate
+  - mocking
+  - node-status
+  - opa
+  - openid-connect
+  - opentelemetry
+  - openwhisk
+  - prometheus
+  - proxy-cache
+  - proxy-control
+  - proxy-mirror
+  - proxy-rewrite
+  - public-api
   - real-ip
-#  - redirect
-#  - referer-restriction
+  - redirect
+  - referer-restriction
   - request-id
-#  - request-validation
-#  - response-rewrite
-#  - rocketmq-logger
-#  - server-info
-#  - serverless-post-function
-#  - serverless-pre-function
-#  - skywalking
-#  - skywalking-logger
-#  - sls-logger
-#  - splunk-hec-logging
-#  - syslog
-#  - tcp-logger
-#  - traffic-split
-#  - ua-restriction
-#  - udp-logger
-#  - uri-blocker
-#  - wolf-rbac
-#  - zipkin
-#  - elasticsearch-logge
-#  - openfunction
-#  - tencent-cloud-cls
-#  - ai
-#  - cas-auth
+  - request-validation
+  - response-rewrite
+  - rocketmq-logger
+  - server-info
+  - serverless-post-function
+  - serverless-pre-function
+  - skywalking
+  - skywalking-logger
+  - sls-logger
+  - splunk-hec-logging
+  - syslog
+  - tcp-logger
+  - traffic-split
+  - ua-restriction
+  - udp-logger
+  - uri-blocker
+  - wolf-rbac
+  - zipkin
+  - elasticsearch-logge
+  - openfunction
+  - tencent-cloud-cls
+  - ai
+  - cas-auth
