--- a/apisix/apisix/config.yaml
+++ b/apisix/apisix/config.yaml
@@ -3,6 +3,10 @@ deployment:
   role_traditional:
     config_provider: etcd
   admin:
+    admin_key:
+      - name: admin
+        key: K9Ll8tsinN01iThfzH5mRcs8rPYWVr1D7P82mz0M
+        role: admin  
     allow_admin:
       - 0.0.0.0/0  # Please set it to the subnet address you obtained.
                   # If not set, by default all IP access is allowed.
